Fix nowrap

--- a/less/write-item.less
+++ b/less/write-item.less
@@ -24,5 +24,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 1.8rem;
+    width: 100%;
+    word-wrap: break-word;
   }
 }
